--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
   
   <body>
 
-        <div class="container d-flex align-items-center h-100">
-            <div class="row">
-                <header class="text-center col-12 ">
-                    <h2 class="text-uppercase"><strong>Cherish the Beauty of the Outdoors</strong></h2>
-                </header>
-                <div class="buffer col-12"></div>
-                <section class="text-center col-12 ">
-                    <a href="https://us21.list-manage.com/contact-form?u=f626fde49788235f6e54eb663&form_id=77b59c1bd9a1de89c108dadd429ff5a5"><button class="btn btn-primary btn-xl">Discover Nature's Wonders</button></a>
-                </section>
-            </div>
+    <div class="container h-100 d-flex flex-column justify-content-center">
+        <div class="row">
+            <header class="text-center col-12">
+                <h2 class="text-uppercase"><strong>Cherish the Beauty of the Outdoors</strong></h2>
+            </header>
+            <div class="buffer col-12"></div>
+            <section class="text-center col-12">
+                <a href="https://us21.list-manage.com/contact-form?u=f626fde49788235f6e54eb663&form_id=77b59c1bd9a1de89c108dadd429ff5a5">
+                    <button class="btn btn-primary btn-md">Discover Nature's Wonders</button>
+                </a>
+            </section>
         </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
